--- a/templates/hello.html
+++ b/templates/hello.html
@@ -11,7 +11,9 @@
     <title>Covid19 Tracker</title>
   </head>
   <body>
-    <h1>{{greeting}}</h1>
+    {% for country in countryList %}
+    <p>{{ country }}</p>
+    {% endfor %}
 
 
 
