adding data from post result

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -22,6 +22,27 @@
       <input type="submit" value="Submit">
     </form>
  
+    <h2>
+      Country Selected : {{selectedCountry}}
+    </h2>
+    <p>
+      New Case  : {{newCases}}
+    </p>
+    <p>
+      Active Case  : {{activeCases}}
+    </p>
+    <p>
+      Critical Case  : {{criticalCases}}
+    </p>
+    <p>
+      Recovered Case  : {{recoveredCases }}
+    </p>
+    <p>
+      Total Case  : {{totalCases}}
+    </p>
+    <p>
+      Death Case  : {{deathCases}}
+    </p>   
 
 
 
