--- a/templates/hello.html
+++ b/templates/hello.html
@@ -10,10 +10,22 @@
 
     <title>Covid19 Tracker</title>
   </head>
+
+  <style>
+    body{
+      background-color: black;
+    }
+  </style>
+
+
   <body>
 
 
     <div class="container mt-3 ">
+     <h1 class="text-white">
+      <span class="text-danger">Covid-19</span>  Statistics over the World 
+     </h1>
+
       <form action="" method="post">
         {% csrf_token %}
         <select name="countries" id="countries">
@@ -21,7 +33,7 @@
           <option value="{{ country }}">{{ country }}</option>
           {% endfor %}
         </select>
-        <input type="submit" value="Submit">
+        <input  class="btn btn-danger" type="submit" value="Submit">
       </form>
    
       <h2>
