--- a/templates/hello.html
+++ b/templates/hello.html
@@ -20,21 +20,34 @@
 
   <body>
 
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="https://rapidapi-prod-collections.s3.amazonaws.com/1934d868-b8b9-40bf-a3a0-a978f007f89d.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          <span class="text-danger">Covid-19</span>  Statistics over the World 
+        </a>
+      </div>
+    </nav>
+    <div class="container mt-4 mr-0">
 
-    <div class="container mt-3 ">
-     <h1 class="text-white">
-      <span class="text-danger">Covid-19</span>  Statistics over the World 
-     </h1>
+      <div class="row">
+        <div class="col-md-6">
 
-      <form action="" method="post">
-        {% csrf_token %}
-        <select name="countries" id="countries">
-          {% for country in countryList %}
-          <option value="{{ country }}">{{ country }}</option>
-          {% endfor %}
-        </select>
-        <input  class="btn btn-danger" type="submit" value="Submit">
-      </form>
+        </div>
+        <div class="col-md-12">
+          <form action="" method="post">
+            {% csrf_token %}
+            <select class="form-control mb-3" name="countries" id="countries">
+              {% for country in countryList %}
+              <option value="{{ country }}">{{ country }}</option>
+              {% endfor %}
+            </select>
+            <input  class="btn btn-danger" type="submit" value="Submit">
+          </form> 
+        </div>
+
+      </div>
+   
    
       <h2>
         Country Selected : {{selectedCountry}}
