applying bootstrap css few updates on text color   #6

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -49,12 +49,9 @@
             </div>
           </form> 
  
-
-   
-   
-      <h2>
+      <h4 class="text-info">
         Country Selected : {{selectedCountry}}
-      </h2>
+      </h4>
       <p>
         New Case  : {{newCases}}
       </p>
