update on color schema of box

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -59,13 +59,13 @@
       </h4>
       <div class="row ml-2">
 
-        <div class="col-md-2 box bg-light">
+        <div class="col-md-2 box bg-primary">
           <h1>{{newCases}}</h1>
           <p>
             New Case   
           </p>
         </div>
-        <div class="col-md-2 box bg-info">
+        <div class="col-md-2 box bg-warning">
           <h1>{{activeCases}}</h1>
           <p>
             Active Case  
@@ -77,7 +77,7 @@
             Critical Case  
           </p>
         </div>
-        <div class="col-md-2 box bg-light">
+        <div class="col-md-2 box bg-success text-light">
           <h1>{{recoveredCases }}</h1>
           <p>
             Recovered Case  
@@ -89,7 +89,7 @@
             Total Case   
           </p>
         </div>
-        <div class="col-md-2  box bg-light">
+        <div class="col-md-2  box bg-secondary text-white">
          <h1>{{deathCases}}</h1> 
           <p>
             Death Case 
