--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,23 +9,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+    <!-- Custom Css -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" >
+
     <title>Covid19 Tracker</title>
   </head>
-
-  <style>
-    body{
-      background-color: black;
-    }
-    .box{
-  box-sizing: border-box;
-  border: 3px solid transparent;
-  background-clip:padding-box;
-}
-.col-md-2{
-  padding: 1rem;
-}
-  </style>
-
 
   <body>
 
