adding developed by and icon on the website besides some css change

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ box-sizing: border-box;
 border: 3px solid transparent;
 background-clip:padding-box;
 }
-.col-md-2{
-padding: 1rem;
+.space{
+
+  margin-top: 14rem;
 }
