--- a/templates/hello.html
+++ b/templates/hello.html
@@ -12,6 +12,9 @@
     <!-- Custom Css -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" >
 
+    <!-- Icon -->
+    <link rel="icon" href="{% static 'img/covidLogo.png' %}" type="image/png">
+
     <title>Covid19 Tracker</title>
   </head>
 
@@ -54,49 +57,48 @@
 
         <div class="col-md-2 box bg-light">
           <h1>{{totalCases}}</h1>
-          <h5>
+          <p>
             Total Case   
-          </h5>
+          </p>
         </div>
         <div class="col-md-2 box bg-primary text-light">
           <h1>{{newCases}}</h1>
-          <h5>
+          <p>
             New Case   
-          </h5>
+          </p>
         </div>
         <div class="col-md-2 box  bg-secondary text-white">
           <h1>{{activeCases}}</h1>
-          <h5>
+          <p>
             Active Case  
-          </h5>
+          </p>
         </div>
         <div class="col-md-2 box  bg-warning">
           <h1>{{criticalCases}}</h1>
-          <h5>
+          <p>
             Critical Case  
-          </h5>
+          </p>
         </div>
         <div class="col-md-2 box bg-success text-light">
           <h1>{{recoveredCases }}</h1>
-          <h5>
+          <p>
             Recovered Case  
-          </h5>
+          </p>
         </div>
         <div class="col-md-2  box bg-danger">
          <h1>{{deathCases}}</h1> 
-          <h5>
+          <p>
             Death Case 
-          </h5> 
+          </p> 
         </div>
-        
-
+ 
       </div>
- 
-  
-  
-  
+
+      <br><br><br><br><br>
+      <div class="space"></div>
+     
+      <p class="text-white mt-4 text-center">Developed by Fitsum A. @2021</p>
    
- 
     </div>
 
    
