change the symbol

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -97,7 +97,7 @@
       <br><br><br><br><br>
       <div class="space"></div>
      
-      <p class="text-white mt-4 text-center">Developed by Fitsum A. @2021</p>
+      <p class="text-white mt-4 text-center">Developed by Fitsum A. &copy;2021</p>
    
     </div>
 
