--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block main %}
+{% extends "base.html" %} {% block main %}
 
 <form class="row g-2 mt-4" action="" method="post">
     {% csrf_token %}
