--- a/templates/base.html
+++ b/templates/base.html
@@ -21,30 +21,12 @@
 
 <body>
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="https://rapidapi-prod-collections.s3.amazonaws.com/1934d868-b8b9-40bf-a3a0-a978f007f89d.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                <span class="text-danger">Covid-19</span> Statistics over the World
-            </a>
-        </div>
-    </nav>
+    {% include "navigation.html" %}
     <div class="container mt-4 mr-0">
 
-        {% block main %}{% endblock %}
-
-
-
-        <br><br><br><br><br>
-        <div class="space"></div>
-
-        <p class="text-white mt-4 text-center">Developed by Fitsum A. &copy;2021</p>
+        {% block main %}{% endblock %} {% include "footer.html" %}
 
     </div>
-
-
-
-
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
