--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="https://rapidapi-prod-collections.s3.amazonaws.com/1934d868-b8b9-40bf-a3a0-a978f007f89d.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
             <span class="text-danger">Covid-19</span> Statistics over the World
         </a>
