--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block main %}
 
-<form class="row g-2 mt-4" action="" method="post">
+<form class="row g-2 mt-4" action="" method="post" id="myform">
     {% csrf_token %}
     <div class="row">
 
