adding select2 for search drop down

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row">
 
         <div class="col-md-6">
-            <select class="form-control mb-3 " name="countries" id="countries">
+            <select class="form-control mb-3 js-example-basic-single " name="state" id="countries">
                 <option value="{{ selectedCountry }}">{{ selectedCountry }}</option>  
                 {% for country in countryList %}
                   <option value="{{ country }}">{{ country }}</option>
